test-data/invalid/invalid-binary-expression.jsx
const InvalidBinaryExpression = () => (
    <Translate>
        {'foo' - 'bar'}
    </Translate>
);
